<resources>
	<string name="app_name">13-maktab</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="dhoaidf">dhoaidf</string>
	<string name="title_activity_home">HomeActivity</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>

	<string name="menu_home">Bosh menu</string>
	<string name="menu_gallery">Bo\'limlar</string>
	<string name="menu_slideshow">Maktab yangiliklari</string>
	<string name="bino_manzili">Bino manzili</string>
	<string name="bog_lanish">Bog\'lanish</string>
	<string name="ijtimoiy_tarmoqlar">Ijtimoiy tarmoqlar</string>
	<string name="ilova_haqida">Ilova Haqida</string>
	<string name="ilovadan_chiqish">Ilovadan chiqish</string>
	<string name="asosiy">Asosiy</string>
	<string name="bolimlar">Bolimlar</string>
	<string name="yangiliklar">Yangiliklar</string>
	<string name="bino">Bino</string>
	<string name="maktab_haqidaa">\t\t\tSamarqand viloyati Qo\'shrabot tumaniga qarashli 13- umumiy o\'rta ta\'lim maktabi uzluksiz ta\'lim tizimining asosiy bo\'g\'ini bo\'lib, u o\'quvchi yoshlarga davlat ta\'lim standartlari asosida fan asoslaridan umumiy o\'rta ma\'lumot beruvchi kunduzgi majburiy ta\'lim muassasasi. \n\n\t\tMaktabda ta\'lim o\'zbek tilida olib boriladi. Maktab binosi 1971- yilda qurilishi boshlangan, 1973- yil avgust oyida ishga tushgan. Maktabga dastlab ustoz Nurmuhammedov Qahramon direktor bo\'lgan, o\'quv ishlari bo\'yicha direktor o\'rinbosari ustoz Almanov Do\'stbek hamda ustoz Matayev Jalil direktor o\'rinbosari lavozimlarida maktab faoliyatini boshlashgan. 1975- yilda maktabni dastlabki bitiruvchilar bitrib chiqdi. \n\t1980-yildan 1982- yilgacha maktabda ustoz Abduvohidov Do`stbek direktor lavozimida ishlagan. \n\t1983 yildan 1985- yilgacha ustoz Nurmuhammedov Qahramon direktor lavozimida ishlagan, \n\t1985- vildan 1987- yilgacha ustoz Matayev Jalil direktor lavozimida ishlagan. \n\t1987-yildan 1993- yilgacha ustoz Axmedov Abduali direktor lavozimida ishlagan, \n\t1993-yildan 2020- yilgacha ustoz Sindarov Otoqul direktor lavozimida ishlagan. \n\n\t\t1993-yildan 2020- yilgacha 27- yil davomida ustoz Sindarov Otoqul 13- umumiy o\'rta ta\'lim maktabida direktor lavozimida ishladi. Mana shu yillar mobaynida maktab o\'zida minglab yetuk mutaxasislarga ta\'lim tarbiya berib, ular Vatanimizning turli sohalarida faoliyat yuritib, Vatan ravnaqiga munosib hissa qo\'shib kelmoqdalar. Maktab o\'quvchilaridan ko`plab iqtidorli o\'quvchilar fan olimpiadalarida tuman, viloyat bosqichlarida ishtirok etib. nufuzli o\'rinlarni egallab kelmoqda. Albatta bu yutuqlarni qo\'lga kiritishda malakali ustozlarni o\'rni katta. \n\n\t\tMaktabda ustoz Sindarov Otoqul rahbarlik davrida 2008- yil qayta ikki qavatli bino qurilib, foydalanishga topshirildi. Maktab o\'zining sport maydoni va sport zaliga ega.\n2018-2019 o\'quv yilining tahliliy yakunlariga ko\'ra tumanda faoliyat ko\'rsatayotgan 89 ta umum ta\'lim maktablari orasida 13-umumiy o rata ta lim maktabi 5-rinni egallagan. Maktab bitiruvchilari o\'rtasida oliy ta\'lim muassasalariga qabul qilinayotgan o\'quvchilar ko\'rsatkichi ham yuqori o\'rinlarni egallaydi. Bugungi kunda maktabda 70 nafar pedagog xodim faoliyat yuritib kelmoqda, 11-yillik ta\'limni qamraq olgan bo\'lib, hozirgi kunda 760 nafar o\'quvchilar ta\'lim olib kelmoqda. Maktabda ta\'lim mashg\'ulotlari ikki navbatda tashkil etilgan.</string>
	<string name="title_activity_main2">MainActivity2</string>
	<!-- Strings used for fragments for navigation -->
	<string name="first_fragment_label">First Fragment</string>
	<string name="second_fragment_label">Second Fragment</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>

	<string name="hello_first_fragment">Hello first fragment</string>
	<string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
	<string name="title_activity_media">MediaActivity</string>
	<string name="so_ngi_e_lon">So\'ngi e\'lon:</string>
	<string name="yangiliklar_1">YANGILIKLAR:</string>
	<string name="ko_proq_yuklash">Ko\'proq yuklash</string>
	<string name="bo_limlar">Bo\'limlar</string>
	<string name="maktab">Maktab</string>
	<string name="rahbariyat">Rahbariyat</string>
</resources>