<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:showIn="navigation_view">

	<group android:checkableBehavior="single">
		<item
			android:id="@+id/nav_home"
			android:icon="@drawable/ic_baseline_home_24"
			android:title="@string/menu_home" />
		<item
			android:id="@+id/itemsFragment"
			android:icon="@drawable/ic_baseline_menu_24"
			android:title="@string/menu_gallery" />
		<item
			android:id="@+id/yangiliklarFragment"
			android:icon="@drawable/ic_baseline_language_24"
			android:title="@string/menu_slideshow" />
		<item
			android:id="@+id/binolarFragment"
			android:icon="@drawable/ic_baseline_location_on_24"
			android:title="@string/bino_manzili" />
		<item
			android:id="@+id/nav_sotial_networkings"
			android:icon="@drawable/ic_media_icon"
			android:title="@string/ijtimoiy_tarmoqlar" />
		<item
			android:id="@+id/aloqaFragment"
			android:icon="@drawable/ic_connection_icon"
			android:title="@string/bog_lanish" />

		<item
			android:id="@+id/aboutFragment"
			android:icon="@drawable/ic_baseline_error_24"
			android:title="@string/ilova_haqida" />
		<item
			android:id="@+id/nav_exit_app"
			android:icon="@drawable/ic_baseline_exit_to_app_24"
			android:title="@string/ilovadan_chiqish" />
	</group>
</menu>